# recSys

./: .gitignore  Dockerfile  README.md  docker-build.sh  docker-compose.yml  run_app.py
app/api/: main.py
app/api/routes/find_books/: endpoints.py
book-two-towers/: README.md  load_data.py  main.py  pyproject.toml
book-two-towers/app/db/: bookDAO.py  ratings_dao.py  types.py  user_dao.py  utils.py
semantic-book-recs/: README.md  pyproject.toml  run_app.py
semantic-book-recs/app/api/: book_app.py
semantic-book-recs/app/api/routes/health/: endpoint.py
semantic-book-recs/app/api/utils/: logging.py
semantic-book-recs/app/book_finder/: book_finder.py
semantic-book-recs/app/book_info_dao/: book_info_dao.py  types.py
semantic-book-recs/app/embedder/: base_embedder.py  model_embedder.py
tests/unit/book_info_demo/: test_book_info_dao.py
tests/unit/embedders/: test_model_embeddrs.py
