[tool.poetry]
authors = ["Stuart Day" ]
description = "Two tower book recs" 
name = "what ya wanna read" 
package-mode = false # we only want to use poetry for dependency management
packages = []
readme = "README.md"
version = "0.0.0"

[tool.poetry.dependencies]
fastapi = ">=0.109.0,<1.0.0"
httpx = "^0.27.2"
pydantic = ">=2.8.2,<3.0.0"
pydantic_settings = ">=2.1.0,<3.0.0"
python = "~3.12"
setuptools = "^74.1.0"
uvicorn = ">=0.23.0,<1.0.0"
jax = "^0.5.0"
jaxtyping = "^0.2.37"
pandas = "^2.2.3"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
pyright = "^1.1.378"
pytest = "^8.3.2"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
rich = "^13.8.0"
ruff = "^0.6.3"
ruff-lsp = "^0.0.55"

[tool.poetry.extras]
dev = ["pre-commit"]

[tool.pyright]
deprecateTypingAliases = true
include = ["app", "tests"]
pythonPlatform = "All"
pythonVersion = "3.12"
reportDeprecated = true
reportMissingImports = true
reportMissingTypeStubs = false
reportUnnecessaryComparison = true
stubPath = "stubs"
typeCheckingMode = "strict"

[[tool.pyright.executionEnvironments]]
extraPaths = ["."]
reportPrivateUsage = false
root = "tests/unit"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core==1.8.0"]
